# cactus-sana

./: .gitignore  run_examples.py  run_txt2img.py  sana_0.6b_configs.json  sana_specs.json  test_generate.py  test_img2img.py  test_sana_generate.py
android/: Cactus.kt  cactus_jni.cpp
apple/: Cactus.swift
cactus/engine/: engine.h  engine_model.cpp
cactus/ffi/: cactus_ffi.h  cactus_image.cpp  cactus_utils.h
cactus/graph/: graph.h  graph_builder.cpp  graph_execute.cpp  graph_ops_nn.cpp
cactus/kernel/: kernel.h  kernel_conv.cpp
cactus/models/: model_gemma.cpp  model_sana.cpp  model_sana.h  model_sana_scheduler.cpp  model_sana_vae.cpp  sana_transformer_ops.cpp  sana_transformer_ops.h  sana_vae_ops.cpp  sana_vae_ops.h
cactus/npu/: npu.h  npu_ane.h  npu_ane.mm
python/: convert_sana.py  convert_sana_coreml.py
python/src/: cactus.py  converter.py
react-native/: Cactus.podspec  README.md  nitro.json  package.json
react-native/android/: CMakeLists.txt
react-native/android/src/main/java/com/margelo/nitro/cactus/: HybridCactusFileSystem.kt
react-native/cpp/: HybridCactus.cpp  HybridCactus.hpp  HybridCactusIndex.cpp  HybridCactusIndex.hpp  cactus_ffi.h
react-native/example/: package.json
react-native/example/src/: App.tsx  ChatScreen.tsx  CompletionScreen.tsx  IndexScreen.tsx  ModelBrowserScreen.tsx  STTScreen.tsx  StreamSTTScreen.tsx  ToolCallingScreen.tsx  VisionScreen.tsx
react-native/ios/: HybridCactusFileSystem.swift
react-native/src/: index.tsx  modelRegistry.ts
react-native/src/__tests__/: CactusSana.test.ts  SanaIntegration.test.tsx  useCactusSana.test.ts
react-native/src/classes/: CactusIndex.ts  CactusLM.ts  CactusSTT.ts  CactusSana.ts  (+1 more)
(+19 files in other folders)
